--- a/public/index.html
+++ b/public/index.html
@@ -60,8 +60,6 @@
     </button>
 
     <div id="about" class="weather-card">
-      <b>Your First Progressive Web App Codelab</b><br>
-      Get started at <a href="https://g.co/codelabs/pwa">https://g.co/codelabs/pwa</a>.
     </div>
 
     <div id="weather-template" class="weather-card" hidden>
@@ -80,26 +78,26 @@
         <div class="visual">
           <div class="icon"></div>
           <div class="temperature">
-            <span class="value"></span><span class="scale">°F</span>
+            <span class="value"></span><span class="scale">°C</span>
           </div>
         </div>
         <div class="description">
           <div class="humidity">
-            <span class="label">Humidity:</span>
+            <span class="label">Fugtighed:</span>
             <span class="value"></span><span class="scale">%</span>
           </div>
           <div class="wind">
-            <span class="label">Wind:</span>
+            <span class="label">Blæst:</span>
             <span class="value"></span>
-            <span class="scale">mph</span>
+            <span class="scale">mps</span>
             <span class="direction"></span>°
           </div>
           <div class="sunrise">
-            <span class="label">Sunrise:</span>
+            <span class="label">Solopgang:</span>
             <span class="value"></span>
           </div>
           <div class="sunset">
-              <span class="label">Sunset:</span>
+              <span class="label">Solnedgang:</span>
               <span class="value"></span>
             </div>
         </div>
